# WasmEdge

./: .CurrentChangelog.md  .clang-format  .clang-tidy  .commitlintrc.js  .dockerignore  .editorconfig  .gitattribute  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .gitvote.yml  .lgtm.yml  .lineguardrc  .linelint.yml  .packit.yml  .rustfmt.toml  0001-feat-rocm-workaround-for-ROCm-platform.patch  AGENTS.md  CMakeLists.txt  CODE_OF_CONDUCT.md  Cargo.toml  Changelog.md  DONOTMERGE.md  Dockerfile  Dockerfile.pytorch24  Ecosystem.md  FindWasmEdge.cmake  GOVERNANCE.md  GPG-PUB-KEY-INTEL-SW-PRODUCTS.PUB  LICENSE.spdx  Print Array in reverse order  README-CH.md  README-ch.md  README-ja.md  README-zh-TW.md  README-zh.md  README.md  Readme-CH.md  ReleaseProcess.md  (+21 more)
bindings/python/: CMakeLists.txt  Containerfile  MANIFEST.in  Makefile  README.md  mkdocks.yml  mkdocs.yml  requirements-test.txt  setup.py
examples/embed_cxx/: CMakeLists.txt  README.md  main.cpp
lib/: CMakeLists.txt  structure.txt
lib/aot/: CMakeLists.txt  blake3.cpp  cache.cpp  compiler.cpp  llvm.h
lib/api/: CMakeLists.txt  libwasmedge.lds  ssvm.cpp  vfs_io.cpp  wasm_c.cpp  wasmedge.cpp  wasmedge_compat.cpp  wasmedge_cpp.cpp  wasmedge_hot_reload.cpp  whitelist.symbols
lib/ast/: CMakeLists.txt  description.cpp  expression.cpp  instruction.cpp  module.cpp  section.cpp  segment.cpp  type.cpp
lib/common/: CMakeLists.txt  configure.cpp  cputime.cpp  errinfo.cpp  hash.cpp  hexstr.cpp  int128.cpp  log.cpp  proposal.cpp  spdlog.cpp  statistics.cpp
lib/compiler/: CMakeLists.txt  compiler.cpp  library.cpp
lib/driver/: CMakeLists.txt  compiler.cpp  compilerTool.cpp  fuzzPO.cpp  fuzzTool.cpp  fuzzWAT.cpp  instantiateTool.cpp  parseTool.cpp  pluginsTool.cpp  runtimeTool.cpp  tool.cpp  toolConfig.cpp  uniTool.cpp  validateTool.cpp  wasiNNRPCServerTool.cpp
lib/executor/: CMakeLists.txt  coredump.cpp  executionengine.cpp  executor.cpp  frameentry.cpp  functioninst.cpp  globalinst.cpp  helper.cpp  labelentry.cpp  memoryinst.cpp  memorypool.cpp  moduleinst.cpp  stackmgr.cpp  storemgr.cpp  tableinst.cpp  valueentry.cpp  worker.cpp  worker_comparison.cpp  worker_control.cpp  worker_memory.cpp  worker_numeric.cpp
lib/expvm/: CMakeLists.txt  vm.cpp
lib/gc/: CMakeLists.txt  allocator.cpp
lib/host/: CMakeLists.txt
lib/interpreter/: CMakeLists.txt  helper.cpp  interpreter.cpp
lib/llvm/: CMakeLists.txt  codegen.cpp  compiler.cpp  data.cpp  data.h  jit.cpp  lazyjit.cpp  llvm.cpp  llvm.h
lib/loader/: CMakeLists.txt  aot_section.cpp  description.cpp  expression.cpp  filemgr.cpp  instruction.cpp  ldmgr.cpp  loader.cpp  loadmgr.cpp  module.cpp  section.cpp  segment.cpp  shared_library.cpp  type.cpp
lib/plugin/: CMakeLists.txt  hot_reload.cpp  plugin.cpp
lib/po/: CMakeLists.txt  argument_parser.cpp
lib/proxy/: CMakeLists.txt  cmdparser.cpp  proxy.cpp
lib/runtime/: CMakeLists.txt  component_instance.cpp
lib/signature/: CMakeLists.txt  sig_algorithm.cpp  signature.cpp
lib/support/: CMakeLists.txt  hexstr.cpp  log.cpp  statistics.cpp
lib/system/: CMakeLists.txt  allocator.cpp  config.h.in  fault.cpp  mmap.cpp  path.cpp  stacktrace.cpp
lib/validator/: CMakeLists.txt  component_canon.cpp  component_context.cpp  component_match.cpp  component_name.cpp  component_type.cpp  component_validator.cpp  component_version.cpp  formchecker.cpp  validator.cpp  validator_component.cpp  vm.cpp
lib/vm/: CMakeLists.txt  environment.cpp  plugin_modules.cpp  plugin_modules.h  vm.cpp
lib/wasi_nn_rpc/: CMakeLists.txt  wasi_ephemeral_nn.proto
lib/wat/: CMakeLists.txt  convert_instrs.cpp  convert_literals.cpp  convert_sections.cpp  convert_types.cpp  converter.cpp  converter.h  grammar.js  maybe_wat.cpp  parser.cpp  tree-sitter.json  tree_sitter.cpp  tree_sitter.h
plugins/: CMakeLists.txt
plugins/httpsreq/: CMakeLists.txt  httpsreqbase.h  httpsreqenv.cpp  httpsreqenv.h  httpsreqfunc.cpp  httpsreqfunc.h  httpsreqmodule.cpp  httpsreqmodule.h
plugins/test/: CMakeLists.txt  test.c
plugins/wasi_cli/: CMakeLists.txt  README.md  base.h  env.cpp  env.h  func.cpp  func.h  module.cpp  module.h
plugins/wasi_clocks/: CMakeLists.txt  README.md  base.h  env.cpp  env.h  func.cpp  func.h  module.cpp  module.h
plugins/wasi_crypto/: CMakeLists.txt  ctx.cpp  ctx.h  module.cpp  module.h
plugins/wasi_filesystem/: CMakeLists.txt  README.md  base.h  env.cpp  env.h  func.cpp  func.h  module.cpp  module.h
plugins/wasi_http/: CMakeLists.txt  README.md  base.h  env.cpp  env.h  func.cpp  func.h  func_types.cpp  interface.h  interface_types.cpp  module.cpp  module.h
plugins/wasi_io/: CMakeLists.txt  README.md  base.h  env.cpp  env.h  func.cpp  func.h  module.cpp  module.h  type.cpp  type.h
plugins/wasi_llm/: CMakeLists.txt  llmc_fwd.h  types.h  wasillmbase.h  wasillmenv.cpp  wasillmenv.h  wasillmfunc.cpp  wasillmfunc.h  wasillmmodule.cpp  wasillmmodule.h
plugins/wasi_logging/: CMakeLists.txt  base.h  env.cpp  env.h  func.cpp  func.h  module.cpp  module.h
plugins/wasi_nn/: CMakeLists.txt  DESIGN.md  bitnet.patch  chattts.cpp  chattts.h  ggml.cpp  ggml.h  ggml.patch  mllama.patch  mlx.cpp  mlx.h  neuralspeed.cpp  neuralspeed.h  onnx.cpp  onnx.h  openvino.cpp  openvino.h  piper.cpp  piper.h  piper.patch  resource_table.h  tf.cpp  tf.h  tfl.cpp  tfl.h  torch.cpp  torch.h  types.h  wasinn_bitnet.cpp  wasinn_bitnet.h  wasinn_chattts.cpp  wasinn_chattts.h  wasinn_ggml.cpp  wasinn_ggml.h  wasinn_ggml_log.h  wasinn_llama_log.h  wasinn_log_gate.h  wasinn_mlx.cpp  wasinn_mlx.h  wasinn_neuralspeed.cpp  (+34 more)
plugins/wasi_nn_burnrs/: CMakeLists.txt  Cargo.toml
plugins/wasi_nn_rust/: CMakeLists.txt  Cargo.toml
plugins/wasi_ocr/: CMakeLists.txt  Makefile  cmake_install.cmake  wasiocrbase.h  wasiocrenv.cpp  wasiocrenv.h  wasiocrfunc.cpp  wasiocrfunc.h  wasiocrmodule.cpp  wasiocrmodule.h
plugins/wasi_poll/: CMakeLists.txt  README.md  base.h  env.cpp  env.h  func.cpp  func.h  module.cpp  module.h
plugins/wasi_random/: CMakeLists.txt  env.cpp  func.cpp  module.cpp
plugins/wasi_threads/: CMakeLists.txt  (+7 more)
test/: CMakeLists.txt  structure.txt
(+4558 files in other folders)
