# SPDX-License-Identifier: Apache-2.0
if(WASMEDGE_BUILD_AOT_RUNTIME)
  add_subdirectory(aot)
endif()
add_subdirectory(common)
add_subdirectory(system)
add_subdirectory(loader)
add_subdirectory(validator)
add_subdirectory(interpreter)
add_subdirectory(host)
add_subdirectory(vm)
if(WASMEDGE_BUILD_SHARED_LIB OR WASMEDGE_BUILD_STATIC_LIB)
  add_subdirectory(api)
endif()
